--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
             <div class="lakeView">
                 <div class="headLine">
-                    <h3>Discover Amazing in Places of Gilgit-Baltistan</h3>
+                    <h3>Discover Amazing in Places of Gilgits-Baltistan</h3>
                     <p>Life is a fatal adventure. It can only have one end. So why not make it as far-ranging and free as possible, it fills empty souls, </p>
                     <a href="#">Learn More</a>
                 </div>
