--- a/index.html
+++ b/index.html
@@ -60,9 +60,6 @@
                     <div class="Discover">
                         <button>Discover</button>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
@@ -83,7 +80,8 @@
                 <div class="page2">
                     <div class="experienceImg2">
                         <img src=".//image/Rectangle 12.png" alt="">
-                        <div class="image2"><img src="./image/Rectangle 13.png" alt=""></div>
+                        <div class="image2">
+                            <img src="./image/Rectangle 13.png" alt=""></div>
                     </div>
                     <div class="experience2">
                         <h2>Client Satisfaction is Our Main Priority</h2>
